Replaced invalid xml entity with valid non-breaking space
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7540 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -1909,7 +1909,7 @@
 	<!-- Browse User Profile -->
 	<document name="CBrowseHostProfile.1">
 		<heading id="Nick"/>
-		<heading> &nbsp;Профиль</heading>
+		<heading> &#160;Профиль</heading>
 		<newline gap="8"/>
 		<group id="1">
 			<newline gap="8" indent="0"/>
