--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -2186,7 +2186,7 @@
 	<!-- Search help documents -->
 	<document name="SearchHelp.BadSearch1">
 		<text format="b">Herbewoord asseblief die soektog</text>
- 		<newline gap="8"/>
+		<newline gap="8"/>
 		<text>Hierdie soektog is swak bewoord, en mag dalk nie korrek funksioneer nie.
 		Soektogte moet 'n paar terme insluit waar moontlik, asook 'n skema (lêertipe).
 		Verder moet soektogte nie slegs syfers of negatiewe terme bevat nie, en
