Replaced invalid XML entities
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7544 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-gr.xml
+++ b/Languages/default-gr.xml
@@ -2573,7 +2573,7 @@
 <!-- Tips displayed when mouse is moved over controls in the dialogs -->
 <controlTips>
 	<tip id="IDC_THROTTLE_MODE" message="Στη μέγιστη λειτουργία, το εύρος ζώνης δεν θα ξεπεράσει την καθορισμένη τιμή. Στη λειτουργία μέσου όρου, θα διακυμαίνεται γύρω από την τιμή."/>
-	<tip id="IDC_REGEXP" message="Χρησιμοποιείστε συνηθείς εκφράσεις στη σύνταξη.{n} Οι λέξεις-κλειδιά μπορούν να καθοριστούν στη μορφή <n>, όπου n είναι ένας αριθμός από το 1 μέχρι το 9. Εάν θέλετε οι λέξεις-κλειδιά να ακολουθούν η μία την άλλη χρησιμοποιείστε τα σύμβολα <_>"/>
+	<tip id="IDC_REGEXP" message="Χρησιμοποιείστε συνηθείς εκφράσεις στη σύνταξη.{n} Οι λέξεις-κλειδιά μπορούν να καθοριστούν στη μορφή &lt;n&gt;, όπου n είναι ένας αριθμός από το 1 μέχρι το 9. Εάν θέλετε οι λέξεις-κλειδιά να ακολουθούν η μία την άλλη χρησιμοποιείστε τα σύμβολα &lt;_&gt;"/>
 	<tip id="IDC_SHARE_PARTIALS" message="Αυτή η ρύθμιση δεν επιδρά σε αρχεία με ED2K hash (εφόσον το δίκτυο ED2K είναι ενεργό), ούτε σε μη σταματημένες λήψεις, ούτε σε torrent.{n}ΠΡΟΣΟΧΗ: Χρησιμοποιείστε τη μόνο σε περίπτωση πραγματικής ανάγκης. Αν την καταχραστείτε, ενδέχεται να σας αποκλείσουν."/>
 </controlTips>
 <!-- Localised Strings -->
