Replaced invalid ampersend entity with the correct one
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7545 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-hr.xml
+++ b/Languages/default-hr.xml
@@ -4207,7 +4207,7 @@
 
 	<dialog name="CDownloadEditPage" cookie="StBuStEdEdStEdBuStStEdBuStEdBuStEdBuBuStStStStStBuStEdStEdBu" caption="Edit Download (Napredno)">
 		<control caption="UPOZORENJE: Ove opcije omogučuju napredno podešavanje skidanja, ako se pogrešno koriste vjerovatno će uzrokovati GREŠKU u skinutoj datoteci"/>
-		<control caption="Ime datoteke & Veličina:"/>
+		<control caption="Ime datoteke &amp; Veličina:"/>
 		<control caption="Ime datoteke:"/>
 		<control/>
 		<control/>
