Fixed layout, incorrect table column/row number, clipboard exchange and context menus under Mono (thanks Brov for the crash reports; hope, now it should run in Linux systems)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7579 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/tools/Updater/MainForm.resx
+++ b/Languages/tools/Updater/MainForm.resx
@@ -117,15 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="tableTopAll.GenerateMember" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>False</value>
-  </metadata>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="tableTopAll.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
-  </data>
-  <data name="tableTopAll.AutoSizeMode" type="System.Windows.Forms.AutoSizeMode, System.Windows.Forms">
-    <value>GrowAndShrink</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="tableTopAll.ColumnCount" type="System.Int32, mscorlib">
@@ -143,6 +137,22 @@
   <data name="tableTopRight.ColumnCount" type="System.Int32, mscorlib">
     <value>2</value>
   </data>
+  <data name="txtEnNew.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Right</value>
+  </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="txtEnNew.Location" type="System.Drawing.Point, System.Drawing">
+    <value>2, 2</value>
+  </data>
+  <data name="txtEnNew.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>2, 2, 2, 2</value>
+  </data>
+  <data name="txtEnNew.Size" type="System.Drawing.Size, System.Drawing">
+    <value>209, 20</value>
+  </data>
+  <data name="txtEnNew.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
   <data name="&gt;&gt;txtEnNew.Name" xml:space="preserve">
     <value>txtEnNew</value>
   </data>
@@ -154,6 +164,27 @@
   </data>
   <data name="&gt;&gt;txtEnNew.ZOrder" xml:space="preserve">
     <value>0</value>
+  </data>
+  <data name="btnEnNew.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Right</value>
+  </data>
+  <data name="btnEnNew.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>On</value>
+  </data>
+  <data name="btnEnNew.Location" type="System.Drawing.Point, System.Drawing">
+    <value>213, 0</value>
+  </data>
+  <data name="btnEnNew.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>0, 0, 0, 0</value>
+  </data>
+  <data name="btnEnNew.Size" type="System.Drawing.Size, System.Drawing">
+    <value>23, 23</value>
+  </data>
+  <data name="btnEnNew.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="btnEnNew.Text" xml:space="preserve">
+    <value>…</value>
   </data>
   <data name="&gt;&gt;btnEnNew.Name" xml:space="preserve">
     <value>btnEnNew</value>
@@ -167,9 +198,8 @@
   <data name="&gt;&gt;btnEnNew.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="tableTopRight.Location" type="System.Drawing.Point, System.Drawing">
-    <value>238, 26</value>
+    <value>238, 25</value>
   </data>
   <data name="tableTopRight.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
@@ -210,6 +240,21 @@
   <data name="tableTopLeft.ColumnCount" type="System.Int32, mscorlib">
     <value>2</value>
   </data>
+  <data name="txtEnOld.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Left</value>
+  </data>
+  <data name="txtEnOld.Location" type="System.Drawing.Point, System.Drawing">
+    <value>2, 2</value>
+  </data>
+  <data name="txtEnOld.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>2, 2, 2, 2</value>
+  </data>
+  <data name="txtEnOld.Size" type="System.Drawing.Size, System.Drawing">
+    <value>209, 20</value>
+  </data>
+  <data name="txtEnOld.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
   <data name="&gt;&gt;txtEnOld.Name" xml:space="preserve">
     <value>txtEnOld</value>
   </data>
@@ -221,6 +266,27 @@
   </data>
   <data name="&gt;&gt;txtEnOld.ZOrder" xml:space="preserve">
     <value>0</value>
+  </data>
+  <data name="btnEnOld.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Left</value>
+  </data>
+  <data name="btnEnOld.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>On</value>
+  </data>
+  <data name="btnEnOld.Location" type="System.Drawing.Point, System.Drawing">
+    <value>213, 1</value>
+  </data>
+  <data name="btnEnOld.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>0, 0, 0, 0</value>
+  </data>
+  <data name="btnEnOld.Size" type="System.Drawing.Size, System.Drawing">
+    <value>23, 23</value>
+  </data>
+  <data name="btnEnOld.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="btnEnOld.Text" xml:space="preserve">
+    <value>…</value>
   </data>
   <data name="&gt;&gt;btnEnOld.Name" xml:space="preserve">
     <value>btnEnOld</value>
@@ -333,11 +399,14 @@
   <data name="tableTopAll.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 26</value>
   </data>
+  <data name="tableTopAll.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>0, 0, 0, 0</value>
+  </data>
   <data name="tableTopAll.RowCount" type="System.Int32, mscorlib">
     <value>2</value>
   </data>
   <data name="tableTopAll.Size" type="System.Drawing.Size, System.Drawing">
-    <value>477, 51</value>
+    <value>476, 50</value>
   </data>
   <data name="tableTopAll.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -357,126 +426,6 @@
   <data name="tableTopAll.LayoutSettings" type="System.Windows.Forms.TableLayoutSettings, System.Windows.Forms">
     <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;TableLayoutSettings&gt;&lt;Controls&gt;&lt;Control Name="tableTopRight" Row="1" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;Control Name="tableTopLeft" Row="1" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblEnOld" Row="0" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="lblEnNew" Row="0" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;/Controls&gt;&lt;Columns Styles="Percent,50,Percent,50,Absolute,20" /&gt;&lt;Rows Styles="Percent,50,Percent,50,Absolute,20" /&gt;&lt;/TableLayoutSettings&gt;</value>
   </data>
-  <data name="txtEnNew.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Left, Right</value>
-  </data>
-  <data name="txtEnNew.Location" type="System.Drawing.Point, System.Drawing">
-    <value>2, 2</value>
-  </data>
-  <data name="txtEnNew.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 2, 2, 2</value>
-  </data>
-  <data name="txtEnNew.Size" type="System.Drawing.Size, System.Drawing">
-    <value>209, 20</value>
-  </data>
-  <data name="txtEnNew.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;txtEnNew.Name" xml:space="preserve">
-    <value>txtEnNew</value>
-  </data>
-  <data name="&gt;&gt;txtEnNew.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;txtEnNew.Parent" xml:space="preserve">
-    <value>tableTopRight</value>
-  </data>
-  <data name="&gt;&gt;txtEnNew.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="btnEnNew.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Left</value>
-  </data>
-  <data name="btnEnNew.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>On</value>
-  </data>
-  <data name="btnEnNew.Location" type="System.Drawing.Point, System.Drawing">
-    <value>213, 0</value>
-  </data>
-  <data name="btnEnNew.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>0, 0, 0, 0</value>
-  </data>
-  <data name="btnEnNew.Size" type="System.Drawing.Size, System.Drawing">
-    <value>23, 23</value>
-  </data>
-  <data name="btnEnNew.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="btnEnNew.Text" xml:space="preserve">
-    <value>…</value>
-  </data>
-  <data name="&gt;&gt;btnEnNew.Name" xml:space="preserve">
-    <value>btnEnNew</value>
-  </data>
-  <data name="&gt;&gt;btnEnNew.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;btnEnNew.Parent" xml:space="preserve">
-    <value>tableTopRight</value>
-  </data>
-  <data name="&gt;&gt;btnEnNew.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="txtEnOld.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Left, Right</value>
-  </data>
-  <data name="txtEnOld.Location" type="System.Drawing.Point, System.Drawing">
-    <value>2, 2</value>
-  </data>
-  <data name="txtEnOld.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>2, 2, 2, 2</value>
-  </data>
-  <data name="txtEnOld.Size" type="System.Drawing.Size, System.Drawing">
-    <value>209, 20</value>
-  </data>
-  <data name="txtEnOld.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;txtEnOld.Name" xml:space="preserve">
-    <value>txtEnOld</value>
-  </data>
-  <data name="&gt;&gt;txtEnOld.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;txtEnOld.Parent" xml:space="preserve">
-    <value>tableTopLeft</value>
-  </data>
-  <data name="&gt;&gt;txtEnOld.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="btnEnOld.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Left</value>
-  </data>
-  <data name="btnEnOld.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>On</value>
-  </data>
-  <data name="btnEnOld.Location" type="System.Drawing.Point, System.Drawing">
-    <value>213, 1</value>
-  </data>
-  <data name="btnEnOld.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>0, 0, 0, 0</value>
-  </data>
-  <data name="btnEnOld.Size" type="System.Drawing.Size, System.Drawing">
-    <value>23, 23</value>
-  </data>
-  <data name="btnEnOld.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="btnEnOld.Text" xml:space="preserve">
-    <value>…</value>
-  </data>
-  <data name="&gt;&gt;btnEnOld.Name" xml:space="preserve">
-    <value>btnEnOld</value>
-  </data>
-  <data name="&gt;&gt;btnEnOld.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;btnEnOld.Parent" xml:space="preserve">
-    <value>tableTopLeft</value>
-  </data>
-  <data name="&gt;&gt;btnEnOld.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
   <metadata name="toolStripSeparator1.GenerateMember" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
   </metadata>
@@ -495,6 +444,15 @@
   <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>0, 477</value>
   </metadata>
+  <data name="lblStatus.Size" type="System.Drawing.Size, System.Drawing">
+    <value>476, 17</value>
+  </data>
+  <data name="lblStatus.Text" xml:space="preserve">
+    <value>Status</value>
+  </data>
+  <data name="lblStatus.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleLeft</value>
+  </data>
   <data name="statusStrip.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 477</value>
   </data>
@@ -516,15 +474,6 @@
   <data name="&gt;&gt;statusStrip.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
-  <data name="lblStatus.Size" type="System.Drawing.Size, System.Drawing">
-    <value>476, 17</value>
-  </data>
-  <data name="lblStatus.Text" xml:space="preserve">
-    <value>Status</value>
-  </data>
-  <data name="lblStatus.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
-    <value>MiddleLeft</value>
-  </data>
   <metadata name="openFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>279, 0</value>
   </metadata>
@@ -534,6 +483,15 @@
   <metadata name="menuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>0, 0</value>
   </metadata>
+  <data name="changeFontToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>81, 20</value>
+  </data>
+  <data name="exportChangesToolStripMenuItem.Enabled" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="exportChangesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>96, 20</value>
+  </data>
   <data name="menuStrip.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
@@ -557,15 +515,6 @@
   </data>
   <data name="&gt;&gt;menuStrip.ZOrder" xml:space="preserve">
     <value>3</value>
-  </data>
-  <data name="changeFontToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>81, 20</value>
-  </data>
-  <data name="exportChangesToolStripMenuItem.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="exportChangesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>96, 20</value>
   </data>
   <metadata name="fontDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>86, 0</value>
@@ -628,7 +577,7 @@
     <value>editor</value>
   </data>
   <data name="&gt;&gt;editor.Type" xml:space="preserve">
-    <value>Updater.Common.EditorTabControl, ShareazaUpdater.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>Updater.Common.EditorTabControl, SkinUpdater.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;editor.Parent" xml:space="preserve">
     <value>$this</value>
@@ -706,7 +655,7 @@
     <value>System.Windows.Forms.SaveFileDialog, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>form</value>
+    <value>MainForm</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
